deploymwnt/order-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: orderservice
spec:
  selector:
    app: orderservice
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
